# students-performance

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci_cd_pipeline.yml
data/03_Processed/: Processed_Test.csv  Processed_Train.csv  preprocessed_test_set.csv  preprocessed_train_set.csv
models/: preprocessor.pkl  ridge_model.pkl
notebook/: 01_data_ingestion.ipynb  02_data_preprocessing.ipynb  03_model_training.ipynb  04_training_pipeline.ipynb  05_prediction_pipeline.ipynb
notebook/sandbox/: data_ingestion_sandbox.ipynb  data_preprocessing_sandbox.ipynb  exception_sandbox.ipynb  logger_sandbox.ipynb  model_training_sandbox.ipynb  predict_pipeline_sandbox.ipynb  utils_sandbox.ipynb
src/StudentsPerformance/components/: data_ingestion.py  data_preprocessing.py  model_trainer.py
src/StudentsPerformance/config/: configuration.py
src/StudentsPerformance/exception/: custom_exception.py
src/StudentsPerformance/logginig/: logger.py
src/StudentsPerformance/pipelines/: prediction_pipeline.py  training_pipeline.py
src/StudentsPerformance/utils/: common.py
src/project_name/components/: data_ingestion.py
src/project_name/logginig/: logger.py
src/project_name/utils/: common.py
src/project_name/visualization/: plots.py
tests/: prediction_pipeline_test.py
